# Resume-Utilities

./: .gitignore  explore_chromdb.py  main.py  output.txt  pyproject.toml  requirements.txt  resume_picker.py  resume_tailor.py  test.py
