[project]
name = "resume-utilities"
version = "0.1.0"
description = ""
authors = [
    {name = "ChrisPerezLebron",email = "98716656+ChrisPerezLebron@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "haystack-ai (>=2.22.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "sentence-transformers (>=5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
